--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <!style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BioWeather - SMACSS Edition</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+
+  <body>
+    <header class="layout-header">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">☀️ BioWeather</a>
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link active" href="index.html">Inicio</a>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main class="container my-5">
+      <header class="section-header text-center mb-5">
+        <h1 class="display-4">Clima Actual</h1>
+        <p class="lead">Pronóstico regional detallado</p>
+      </header>
+
+      <div class="row" id="contenedor-clima"></div>
+    </main>
+
+    <footer class="layout-footer bg-white border-top py-4">
+      <div class="container text-center">
+        <p class="mb-0 text-muted">&copy; 2026 BioWeather - Módulo 4</p>
+        <small>Diseñado por AmasandoPan utilizando SMACSS</small>
+      </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/data.js"></script>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
