--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/data.js"></script>
+    <script src="assets/js/weather-app.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
