pequeñas correcciones de texto

--- a/detalle.html
+++ b/detalle.html
@@ -71,7 +71,7 @@
     <footer class="layout-footer bg-white border-top py-4">
       <div class="container text-center">
         <p class="mb-0 text-muted">&copy; 2026 BioWeather - Módulo 4</p>
-        <small>Diseñado por AmasandoPan utilizando SMACSS</small>
+        <small>Diseñado por AmasandoPan</small>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
