--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BioWeather - SMACSS Edition</title>
+    <title>BioWeather</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -36,7 +36,7 @@
     <footer class="layout-footer bg-white border-top py-4">
       <div class="container text-center">
         <p class="mb-0 text-muted">&copy; 2026 BioWeather - Módulo 4</p>
-        <small>Diseñado por AmasandoPan utilizando SMACSS</small>
+        <small>Diseñado por AmasandoPan</small>
       </div>
     </footer>
 
