Style: se implemente estilo al header. Index: se modifica el header

--- a/index.html
+++ b/index.html
@@ -25,17 +25,22 @@
     </header>
 
     <main class="container my-5">
-      <header class="section-header text-center mb-5">
-        <h1 class="display-4">Clima Actual</h1>
-        <p class="lead">Pronóstico regional detallado</p>
+      <header class="section-header text-center mb-5 hero-area">
+        <h1 class="display-3 font-weight-bold main-title">
+          Clima <span class="text-gradient">Actual</span>
+        </h1>
+        <p class="lead text-secondary mx-auto" style="max-width: 600px">
+          Monitoreo meteorológico en tiempo real y pronósticos detallados para
+          tus ciudades principales.
+        </p>
+        <div class="title-divider"></div>
+        <div class="row" id="contenedor-clima"></div>
       </header>
-
-      <div class="row" id="contenedor-clima"></div>
     </main>
 
     <footer class="layout-footer bg-white border-top py-4">
       <div class="container text-center">
-        <p class="mb-0 text-muted">&copy; 2026 BioWeather - Módulo 5</p>
+        <p class="mb-0 text-muted">&copy; 2026 BioWeather - Módulo</p>
         <small>Diseñado por AmasandoPan</small>
       </div>
     </footer>
