--- a/detalle.html
+++ b/detalle.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body class="bg-light">
     <header>
